[gd_scene load_steps=15 format=3 uid="uid://lik5dot3ht2y"]

[ext_resource type="Script" path="res://towers/diffuser.gd" id="1_ow6fk"]
[ext_resource type="Texture2D" uid="uid://bs3a21ckhywul" path="res://artAssets/shadow16px.png" id="3_xx0y2"]
[ext_resource type="Texture2D" uid="uid://bvgbat7y4i2vm" path="res://artAssets/uiElements/48pxAreaIndicator.png" id="4_3gldc"]
[ext_resource type="Texture2D" uid="uid://ji2vawtenqf7" path="res://artAssets/tower/diffuser.png" id="4_86k1l"]
[ext_resource type="Texture2D" uid="uid://cco3v0y1jgtdg" path="res://artAssets/uiElements/towerBarUnderlay.png" id="6_ocvoi"]
[ext_resource type="Texture2D" uid="uid://bri4dow6dhcx1" path="res://artAssets/effects/diffuser-outline-Sheet.png" id="7_3qnqg"]
[ext_resource type="Texture2D" uid="uid://k81vrojl8vo0" path="res://artAssets/uiElements/towerBarProgress.png" id="7_83p10"]
[ext_resource type="Texture2D" uid="uid://btskkrpsyxyvv" path="res://artAssets/effects/diffuser-base-Sheet.png" id="8_mo2da"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y83y4"]
radius = 24.0

[sub_resource type="Animation" id="Animation_t6ovh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rangeIndicator:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rangeIndicator:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("rangeIndicator:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("cloud/cloud:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("cloud/cloudOutline:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("cloud/cloudOutline:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("cloudArea/CollisionShape2D:shape:radius")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("cloud:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.54902, 0.129412, 0.513726)]
}

[sub_resource type="Animation" id="Animation_y0c1t"]
resource_name = "attack"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cloud/cloud:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("cloud/cloudOutline:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("cloud/cloudOutline:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("cloudArea/CollisionShape2D:shape:radius")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 0.75, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.01, 24.0, 24.0, 0.01]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("cloud:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.54902, 0.129412, 0.505882)]
}

[sub_resource type="Animation" id="Animation_gbj8c"]
resource_name = "placing"
length = 12.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rangeIndicator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6, 12),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rangeIndicator:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4, 6, 8, 10, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rangeIndicator:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_enryn"]
_data = {
"RESET": SubResource("Animation_t6ovh"),
"attack": SubResource("Animation_y0c1t"),
"placing": SubResource("Animation_gbj8c")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_8y230"]

[node name="diffuser" type="Area2D"]
script = ExtResource("1_ow6fk")
cooldown = 5.0
towerCost = 10
statusDuration = 5.0

[node name="shadow" type="Sprite2D" parent="."]
texture = ExtResource("3_xx0y2")
offset = Vector2(0, 4)

[node name="tower" type="Sprite2D" parent="."]
texture = ExtResource("4_86k1l")
offset = Vector2(0, -4)

[node name="rangeIndicator" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_3gldc")

[node name="targetRange" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y83y4")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ProjectileSpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, -8)

[node name="cooldownbar" type="TextureProgressBar" parent="."]
offset_left = -8.0
offset_top = -17.0
offset_right = 8.0
offset_bottom = -13.0
max_value = 1.0
step = 0.1
texture_under = ExtResource("6_ocvoi")
texture_progress = ExtResource("7_83p10")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_enryn")
}
autoplay = "RESET"

[node name="cloud" type="Sprite2D" parent="."]
modulate = Color(0, 0.54902, 0.129412, 0.513726)

[node name="cloudOutline" type="Sprite2D" parent="cloud"]
texture = ExtResource("7_3qnqg")
hframes = 16
frame = 15

[node name="cloud" type="Sprite2D" parent="cloud"]
texture = ExtResource("8_mo2da")
hframes = 16
frame = 15

[node name="cloudArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cloudArea"]
shape = SubResource("CircleShape2D_8y230")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="cloudArea" to="." method="_on_cloud_area_body_entered"]
